--- a/src/components/EmojiGame/index.css
+++ b/src/components/EmojiGame/index.css
@@ -3,7 +3,8 @@
   background-image: linear-gradient(60deg, #9796f0, #fbc7d4);
 }
 
-main {
+main,
+ul {
   padding: 4rem 8rem;
   display: flex;
   flex-wrap: wrap;
