--- a/src/components/WinOrLoseCard/index.css
+++ b/src/components/WinOrLoseCard/index.css
@@ -34,7 +34,7 @@ button:hover {
   cursor: pointer;
 }
 
-h2 {
+.h2 {
   color: #6a59ff;
   font-size: 3rem;
   margin: 0 0 2rem 0;
@@ -44,8 +44,9 @@ h1 {
   font-size: 4.5rem;
 }
 
-h3 {
+section p {
   font-size: 2.7rem;
   margin: 0;
   padding: 0;
+  font-weight: bold;
 }
