--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -23,3 +23,23 @@
 .navbar h1 {
   font-size: 1.5rem;
 }
+
+@media screen and (max-width: 768px) {
+  .navbar .medium {
+    font-size: 1rem;
+  }
+
+  .navbar {
+    padding: 1rem;
+  }
+
+  .navbar p {
+    margin-left: 1rem;
+  }
+}
+
+@media (max-width: 420px) {
+  .navbar h1 {
+    display: none;
+  }
+}
